--- a/views/layout.erb
+++ b/views/layout.erb
@@ -243,7 +243,7 @@
     <div class="container">
         <nav class="nav">
             <a href="/dataclips/list">All Dataclips</a>
-            <a href="/dataclips/new">New Dataclip</a>
+            <a href="/dataclips/create">New Dataclip</a>
         </nav>
         
         <main>
