--- a/views/show.erb
+++ b/views/show.erb
@@ -71,7 +71,7 @@
 <% else %>
     <div class="not-found-actions">
         <a href="/dataclips/list" class="btn">View All Dataclips</a>
-        <a href="/dataclips/new" class="btn btn-secondary">Create New Dataclip</a>
+        <a href="/dataclips/create" class="btn btn-secondary">Create New Dataclip</a>
     </div>
 <% end %>
 
