--- a/views/list.erb
+++ b/views/list.erb
@@ -3,7 +3,7 @@
 <div class="header-section">
     <h1>Dataclips</h1>
     <p>Manage your dataclips and queries</p>
-    <a href="/dataclips/edit" class="btn">Create New Dataclip</a>
+    <a href="/dataclips/new" class="btn">Create New Dataclip</a>
 </div>
 
 <div class="dataclips-section">
@@ -34,7 +34,7 @@
         <% end %>
     <% else %>
         <div class="alert alert-info">
-            <p>No dataclips found. <a href="/dataclips/edit">Create your first dataclip</a> to get started.</p>
+            <p>No dataclips found. <a href="/dataclips/new">Create your first dataclip</a> to get started.</p>
         </div>
     <% end %>
 </div>
